# temperature_humidity_sensor

./: .gitignore  CMakeLists.txt  README.md
cmake/: arm-none-eabi-gcc.cmake
firmware/: CMakeLists.txt  main.c
firmware/application/: CMakeLists.txt
firmware/application/inc/: modemControl.h  temperatureSensor.h  time.h
firmware/application/src/: modemControl.c  temperatureSensor.c  time.c
firmware/drivers/: CMakeLists.txt  CommonTypes.h  drivers.h
firmware/drivers/mcu/src/: GpioDrv.c  I2cDrv.c  PwrDrv.c  RtcDrv.c  SpiDrv.c  UartDrv.c  uart_drv.c
firmware/external_chip_drivers/: CMakeLists.txt
firmware/external_chip_drivers/inc/: sensor_drv.h
firmware/external_chip_drivers/src/: sensor_drv.c
firmware/libraries/trice/: CMakeLists.txt
firmware/libraries/trice/inc/: trice.h
firmware/libraries/trice/src/: trice.c
firmware/scheduler/: CMakeLists.txt
firmware/scheduler/inc/: scheduler.h
firmware/scheduler/src/: scheduler.c
